Bug 429531 - Start a slideshow context menu entry is visible even when no images are in folder
Summary: Start a slideshow context menu entry is visible even when no images are in fo...
Status: RESOLVED FIXED
Alias: None
Product: gwenview
Classification: Applications
Component: general (other bugs)
Version First Reported In: 20.11.80
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: Gwenview Bugs
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2020-11-23 05:53 UTC by Méven Car
Modified: 2021-02-02 20:32 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 21.04
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Méven Car 2020-11-23 05:53:17 UTC
SUMMARY

In dolphin with the "Start a slideshow" service enabled.

STEPS TO REPRODUCE
1. Open a folder without any images
2. Right click

OBSERVED RESULT
"Start a slideshow" is present in the context menu

EXPECTED RESULT
"Start a slideshow" is not present in the context menu.

This affects also files selected.

Fixing this bug involves replacing the slideshow.desktop service file by an implementation of KAbstractFileItemActionPlugin (like ark's compress).

Previous discussion :
https://invent.kde.org/graphics/gwenview/-/merge_requests/23
Comment 1 Nate Graham 2020-11-23 16:38:47 UTC
Yeah this is rather weird.
Comment 2 Bug Janitor Service 2020-11-26 08:15:20 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/gwenview/-/merge_requests/24
Comment 3 Méven Car 2021-02-02 20:32:52 UTC
Git commit a6ceabe9e355581c89b28625ae59a6d7b112bea4 by Méven Car.
Committed on 02/02/2021 at 20:32.
Pushed by meven into branch 'master'.

Replace slideshow ServiceMenu by SlideShowFileItemAction

Using a KAbstractFileItemActionPlugin allows to have more control over when actions are shown in context menus.
Related: bug 430048
FIXED-IN: 21.04

M  +12   -2    app/CMakeLists.txt
D  +0    -70   app/slideshow.desktop
A  +90   -0    app/slideshowfileitemaction.cpp     [License: GPL]
A  +45   -0    app/slideshowfileitemaction.h     [License: GPL]
A  +15   -0    app/slideshowfileitemaction.json

https://invent.kde.org/graphics/gwenview/commit/a6ceabe9e355581c89b28625ae59a6d7b112bea4