Replace slideshow ServiceMenu by SlideShowFileItemAction

Using a KAbstractFileItemActionPlugin allows to have more control over when actions are shown in context menus.

BUG: 429531
BUG: 430048
FIXED-IN: 21.04